<resources>
    <string name="app_name">BookBeakon</string>
    <string name="hint_usuario">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_create">Crear cuenta</string>
    <string name="button_siguiente">Siguiente</string>
    <string name="hint_email">correo_ejemplo@gmail.com</string>
    <string name="hint_nombre_completo">Nombre completo</string>
    <string name="titulo1">¡Empecemos con lo básico!</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="accede">¡Accede!</string>
    <string name="como_quieres_acceder">Ingresa tu usuario y contraseña</string>
    <string name="hint_usuario_registro">Nombre de usuario</string>
    <string name="cuentanos_un_poco_de_ti">¡Cuéntanos un poco sobre ti!</string>
    <string name="escoge_tus_5_generos_favoritos">Selecciona un máximo de 5 géneros favoritos:</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="rango_paginas">¿Cuál es tu rango de páginas preferido al leer un libro?</string>
    <string name="boton_finalizar">Finalizar</string>
    <string name="finalizacion">¡Tu perfil ha sido creado!</string>
    <string name="bienvenida">¡Bienvenido a Book Beacon!</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="escoge_tus_5_autores_favoritos">Selecciona tus 5 autores favoritos</string>
    <string name="actualizar">Actualizar</string>
    <string name="estas_seguro_de_continuar">¿Estás seguro de continuar?</string>
    <string name="pulsa_el_boton_para_finalizar">Pulsa el botón para finalizar la creación de tu cuenta</string>
    <string name="ingresa_tus_preferencias_oprimiento_los_botones">Ingresa tus preferencias oprimiento los botones</string>
    <string name="generos">Géneros</string>
    <string name="generar_recomendacion">Generar recomendación</string>
    <string name="opcion1">Home</string>
    <string name="opcion2">Match</string>
    <string name="opcion3">Profile</string>
    <string name="Home_tittle">Explora</string>
    <string name="match_tittle">Match</string>
    <string name="profile_tittle">Perfil</string>
    <string name="search" />
    <string name="G_Accion">Acción</string>
    <string name="G_Aventura">Aventura</string>
    <string name="G_Thriller">Thriller</string>
    <string name="G_Drama">Drama</string>
    <string name="G_Comedia">Comedia</string>
    <string name="G_Suspenso">Suspenso</string>
    <string name="G_Terror">Terror</string>
    <string name="G_Ficcion">Ficción</string>
    <string name="j_r_r_tolkien">J.R.R Tolkien</string>
    <string name="edgar_a_poe">Edgar A. Poe</string>
    <string name="te_recomendamos">Te recomendamos</string>
    <string name="x">✖️</string>
    <string name="V">✔️</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="puntos">...</string>
    <string name="_100">100</string>
    <string name="_0">0</string>
    <string name="sugerencia">Parece que aun no guardas un libro.\nQue te parece buscamos un libro de tu interes!</string>
    <string name="buscar">Buscar un libro</string>
    <string name="libros_guardados">Libros guardados</string>
    <string name="user1">User1</string>
    <string name="Preferencias_title">Ingresa tus preferencias oprimiento los botones</string>
    <string name="usuario">Usuario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="busca_un_libro">Busca un libro!</string>
</resources>
