<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home_tittle"
        android:textSize="26sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/brandColor"
        />

    <EditText
        android:id="@+id/SearchText"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/search_bar"
        android:hint="@string/busca_un_libro"
        android:inputType="text"
        android:imeOptions="actionSearch"
        />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Accion"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Accion"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Aventura"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Aventura"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Thriller"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Thriller"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Drama"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Drama"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>
    </HorizontalScrollView>


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Comedia"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Comedia"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Suspenso"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Suspenso"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Terror"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Terror"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Ficcion"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_button"
                android:text="@string/G_Ficcion"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LibrosView"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>