<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:src="@drawable/vector_back"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo1"
        style="@style/Titulo"
        android:layout_width="@dimen/width_title"
        android:layout_height="@dimen/heigh_title"
        android:layout_marginTop="55dp"
        android:text="@string/titulo1"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack" />

    <EditText
        android:id="@+id/etRegisterName"
        style="@style/Prueba"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:drawableStart="@drawable/vector_person"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/hint_nombre_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo1" />

    <EditText
        android:id="@+id/etRegisterEmail"
        style="@style/Prueba"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:drawableStart="@drawable/vector_correo"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/hint_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterName"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btBotonSiguiente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/button_siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />


    <TextView
        android:id="@+id/tvTexto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/ya_tienes_una_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBotonSiguiente" />

    <TextView
        android:id="@+id/tvTexto4"
        android:layout_margin="@dimen/margin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accede"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTexto3" />


</androidx.constraintlayout.widget.ConstraintLayout>