<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/imgBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:src="@drawable/vector_back"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo2"
        style="@style/Titulo"
        android:layout_width="@dimen/width_title"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/como_quieres_acceder"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack2"/>

    <EditText
        android:id="@+id/etRegisterUsername"
        style="@style/Prueba"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:drawableStart="@drawable/vector_person"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/hint_usuario_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo2" />

    <EditText
        android:id="@+id/etRegisterPassword"
        style="@style/Prueba"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:drawableStart="@drawable/vector_candado"
        android:drawableTint="@color/colorPrimary"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterUsername"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btBotonSiguiente2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/colorPrimary"
        android:text="Finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>